--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,13 +1,14 @@
-<%= simple_form_for(@blog) do |f| %>
-
+<%= simple_form_for @blog, url: blogs_path do |f| %>
 
 <div class="form-group">
 	<%= f.input :title, input_html:{class:'form-control'} %>
 </div>
 <div class="form-group">
-    <%= f.input :body, as: :summernote, input_html: { id: 'body' } %>
+    <%= f.input :image, as: :file %>
   </div>
-
+	<div class="form-group">
+	    <%= f.input :body, as: :summernote, input_html: { id: 'body' } %>
+	  </div>
   <div class="form-group">
     <%= f.button :submit, class:'btn btn-default' %>
   </div>
