--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,3 +1,4 @@
+<h1>Most recent entries</h1>
 <% @blogs.each do |blog| %>
 	<div class="post_wrapper">
 		<h2 class="title"><%= link_to blog.title, blog %></h2>
