add category to blog posts

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,6 +26,14 @@ body{
   font-family: "Satisfy",cursive;
 
 }
+
+  ul.blogcategory li {
+    font-size: 15px;
+    width: 100%;
+    border: 1px solid;
+}
+
+
 div.logo {
 
     height: 40px;
