--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -4,8 +4,8 @@
 	</h1>
 	<p class="date">
 		Submitted <%= time_ago_in_words(@blog.created_at) %> Ago
-
-		  <%= link_to 'Edit', edit_blog_path(@blog) %> |
+    <% if @blog.category_id? %>|<%= link_to Category.find(@blog.category_id).name, blogs_path(category: @blog.category.name) %> <% end %>
+	|<%= link_to 'Edit', edit_blog_path(@blog) %> |
 		  <%= link_to 'Delete', blog_path(@blog), method: :delete, data: { confirm: 'Are you sure?' } %>
 
 	</p>
