--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,9 @@
     </div>
 <div class="clase_separador_menu"></div>
 </section>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+
 <div class="container">
 <%= yield %>
 
