--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @blog, url: blogs_path do |f| %>
+<%= simple_form_for @blog, :html => { :multipart => true } do |f| %>
 
 <div class="form-group">
 	<%= f.input :title, input_html:{class:'form-control'} %>
