--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -13,5 +13,15 @@
 	<p>
 		<%= @blog.body.html_safe %>
 	</p>
+	<h3>Comments</h3>
+
+	<%= form_for [@blog, Comment.new] do |f| %>
+	<%= f.text_area :body, placeholder: "Add a comment" %><br/>
+	<%= f.submit "Add Comment" %>
+	<% end %>
+
+	<ul>
+	  <%= render(partial: 'comments/comment', collection: @blog.comments) %>
+	</ul>
 
 </div>
