add friendly url to blog posts

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,6 +26,18 @@ body{
   font-family: "Satisfy",cursive;
 
 }
+.slidingDiv {
+height:120px;
+background-color: #99CCFF;
+padding:20px;
+margin-top:10px;
+border-bottom:5px solid #3399FF;
+display:none;
+}
+
+.show_hide {
+
+}
 
   ul.blogcategory li {
     font-size: 15px;
