--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -13,7 +13,7 @@
 							<% @blogs.each do |blog| %>
 								<div class="post_wrapper">
 									<h3 class="title"><%= link_to blog.title, blog %></h3>
-									<p class="date"><%= blog.created_at.strftime("%B, %d, %Y") %></p>
+									<p class="date"><%= blog.created_at.strftime("%B %d, %Y") %></p>
 
 								</div>
 							<% end %>
