--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,13 +40,13 @@
                   <div class="menu_cabecera">
                     <ul class="nav navbar-nav">
                       <li>
-                        <a href="#"> Dreams</a>
+                        <%= link_to "Dreams", root_path %>
                       </li>
                       <li>
-                        <a href="#"> Dictionary</a>
+                        <%= link_to "Dictionary", dictionaries_path %>
                       </li>
                       <li>
-                        <a href="#"> Blog</a>
+                        <%= link_to "Blog", blogs_path %>
                       </li>
                    </ul>
                 </div>
