--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -14,6 +14,7 @@
 								<div class="post_wrapper">
 									<h3 class="title"><%= link_to blog.title, blog %></h3>
 									<p class="date"><%= blog.created_at.strftime("%B %d, %Y") %></p>
+                  <p><%= truncate(strip_tags(blog.body), length: 480) %></p>
 
 								</div>
 							<% end %>
