--- a/app/views/dictionaries/_form.html.erb
+++ b/app/views/dictionaries/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-inputs">
     <%= f.input :term %>
     <%= f.input :tittle %>
-    <%= f.input :definition %>
+      <%= f.input :definition, as: :summernote, input_html: { id: 'body' } %>
   </div>
 
   <div class="form-actions">
