--- a/app/views/share_dreams/_form.html.erb
+++ b/app/views/share_dreams/_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="form-inputs">
     <%= f.input :tittle %>
-    <%= f.input :description %>
+      <%= f.input :description, as: :summernote, input_html: { id: 'body' } %>
   </div>
 
   <div class="form-actions">
